--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
             background-color: #04044c !important;
             /* padding: 10% 10% 20% 5%; */
             align-items: center;
+            justify-content: center;
+            text-align: center;
         }
         .reg_card{
           margin-top: 40px;
@@ -241,6 +243,14 @@
         }
         .second{
             margin: 30px 0;
+        }
+        .contact_us h1{
+          font-size: 30px;
+          font-family: 'Times New Roman', Times, serif;
+          padding-top: 0px;
+        }
+        .contact_us p{
+          font-size: 14px;
         }
         #footer{
           height: 14vh;
@@ -522,7 +532,7 @@
 <!-- ///////////////////////////////////////////////////////// CONTACT us ////////////////////////////////////////// -->
 
   <div class ="container-fluid pt-5 pb-5" id ="contactid">
-    <div class ="section_header text-center mb-5 mt-4">
+    <div class ="section_header text-center contact_us mb-5 mt-4">
       <h1>CONTACT US</h1>
       <p class="text-capitalize pt-1">We're Here to help and answer any question you might have. We look forward to here you 😃</p>
     </div>
